version/0.11/_sources/_autosummary/ansys.api.pyensight.ens_part_point.ENS_PART_POINT.rst.txt
ENS\_PART\_POINT
================

.. currentmodule:: ansys.api.pyensight.ens_part_point

.. autoclass:: ENS_PART_POINT

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_POINT.addchild
      
      
      ENS_PART_POINT.attrgroupinfo
      
      
      ENS_PART_POINT.attrinfo
      
      
      ENS_PART_POINT.attrissensitive
      
      
      ENS_PART_POINT.attrtree
      
      
      ENS_PART_POINT.cmdlang_rec_info
      
      
      ENS_PART_POINT.createpart
      
      
      ENS_PART_POINT.destroy
      
      
      ENS_PART_POINT.get_values
      
      
      ENS_PART_POINT.getattr
      
      
      ENS_PART_POINT.getattrs
      
      
      ENS_PART_POINT.getmetatag
      
      
      ENS_PART_POINT.hasmetatag
      
      
      ENS_PART_POINT.highlight_part
      
      
      ENS_PART_POINT.realtimemode
      
      
      ENS_PART_POINT.removechild
      
      
      ENS_PART_POINT.setattr
      
      
      ENS_PART_POINT.setattr_begin
      
      
      ENS_PART_POINT.setattr_end
      
      
      ENS_PART_POINT.setattr_status
      
      
      ENS_PART_POINT.setattrs
      
      
      ENS_PART_POINT.setmetatag
      
      
      ENS_PART_POINT.simba_get_values
      
      
      ENS_PART_POINT.simba_tracepaths
      
      
      ENS_PART_POINT.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_POINT.ACTIVE
      ENS_PART_POINT.ADJCOORDSCALEFACTOR
      ENS_PART_POINT.ADJCOORDTRANSVEC
      ENS_PART_POINT.ADJCOORDVARSCALEFACTOR
      ENS_PART_POINT.ADJCOORDXVARIABLE
      ENS_PART_POINT.ADJCOORDYVARIABLE
      ENS_PART_POINT.ADJCOORDZVARIABLE
      ENS_PART_POINT.ALPHABY
      ENS_PART_POINT.ALPHABYPALETTE
      ENS_PART_POINT.BOUNDINGREP
      ENS_PART_POINT.CASENUMBER
      ENS_PART_POINT.CHILDREN
      ENS_PART_POINT.CLIP
      ENS_PART_POINT.COLORBYPALETTE
      ENS_PART_POINT.COLORBYRGB
      ENS_PART_POINT.CULLELEMENTS
      ENS_PART_POINT.DESCRIPTION
      ENS_PART_POINT.DISPLACEBY
      ENS_PART_POINT.DISPLACEFACTOR
      ENS_PART_POINT.DOUBLESIDED
      ENS_PART_POINT.DTA_BLOCK
      ENS_PART_POINT.EDIT_TARGET
      ENS_PART_POINT.ELTBLANKING
      ENS_PART_POINT.ELTDEFINEDBY
      ENS_PART_POINT.ELTFEATUREANGLE
      ENS_PART_POINT.ELTFILTER1ACTIVE
      ENS_PART_POINT.ELTFILTER1TESTOP
      ENS_PART_POINT.ELTFILTER1TESTVALUE
      ENS_PART_POINT.ELTFILTER1TESTVARCOMP
      ENS_PART_POINT.ELTFILTER1TESTVARIABLE
      ENS_PART_POINT.ELTFILTER1VARCOMP
      ENS_PART_POINT.ELTFILTER1VARIABLE
      ENS_PART_POINT.ELTFILTER2ACTIVE
      ENS_PART_POINT.ELTFILTER2LOGICALOP
      ENS_PART_POINT.ELTFILTER2TESTOP
      ENS_PART_POINT.ELTFILTER2TESTVALUE
      ENS_PART_POINT.ELTFILTER2TESTVARCOMP
      ENS_PART_POINT.ELTFILTER2TESTVARIABLE
      ENS_PART_POINT.ELTFILTER2VARCOMP
      ENS_PART_POINT.ELTFILTER2VARIABLE
      ENS_PART_POINT.ELTFILTER3ACTIVE
      ENS_PART_POINT.ELTFILTER3LOGICALOP
      ENS_PART_POINT.ELTFILTER3TESTOP
      ENS_PART_POINT.ELTFILTER3TESTVALUE
      ENS_PART_POINT.ELTFILTER3TESTVARCOMP
      ENS_PART_POINT.ELTFILTER3TESTVARIABLE
      ENS_PART_POINT.ELTFILTER3VARCOMP
      ENS_PART_POINT.ELTFILTER3VARIABLE
      ENS_PART_POINT.ELTFILTER4ACTIVE
      ENS_PART_POINT.ELTFILTER4LOGICALOP
      ENS_PART_POINT.ELTFILTER4TESTOP
      ENS_PART_POINT.ELTFILTER4TESTVALUE
      ENS_PART_POINT.ELTFILTER4TESTVARCOMP
      ENS_PART_POINT.ELTFILTER4TESTVARIABLE
      ENS_PART_POINT.ELTFILTER4VARCOMP
      ENS_PART_POINT.ELTFILTER4VARIABLE
      ENS_PART_POINT.ELTFILTER5ACTIVE
      ENS_PART_POINT.ELTFILTER5LOGICALOP
      ENS_PART_POINT.ELTFILTER5TESTOP
      ENS_PART_POINT.ELTFILTER5TESTVALUE
      ENS_PART_POINT.ELTFILTER5TESTVARCOMP
      ENS_PART_POINT.ELTFILTER5TESTVARIABLE
      ENS_PART_POINT.ELTFILTER5VARCOMP
      ENS_PART_POINT.ELTFILTER5VARIABLE
      ENS_PART_POINT.ELTFILTER6ACTIVE
      ENS_PART_POINT.ELTFILTER6LOGICALOP
      ENS_PART_POINT.ELTFILTER6TESTOP
      ENS_PART_POINT.ELTFILTER6TESTVALUE
      ENS_PART_POINT.ELTFILTER6TESTVARCOMP
      ENS_PART_POINT.ELTFILTER6TESTVARIABLE
      ENS_PART_POINT.ELTFILTER6VARCOMP
      ENS_PART_POINT.ELTFILTER6VARIABLE
      ENS_PART_POINT.ELTREPPOINTSNORMALS
      ENS_PART_POINT.ELTREPRESENTATION
      ENS_PART_POINT.ELTSHRINKFACTOR
      ENS_PART_POINT.ENS_DETAILS
      ENS_PART_POINT.ENS_KIND
      ENS_PART_POINT.ENS_MATERIAL
      ENS_PART_POINT.ENS_PARENT_PART
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_0
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_1
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_2
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_3
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_4
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_5
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_6
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_7
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_8
      ENS_PART_POINT.ENS_PLIST_KEY_SEL_9
      ENS_PART_POINT.ENS_SYMMETRY_AXIS
      ENS_PART_POINT.ENS_SYMMETRY_COUNT
      ENS_PART_POINT.ENS_TURBO_STAGE
      ENS_PART_POINT.ENS_TURBO_VDIM
      ENS_PART_POINT.ENS_TURBO_VIEW
      ENS_PART_POINT.ENS_UNITS_LABEL
      ENS_PART_POINT.ENTITYLABELELT
      ENS_PART_POINT.ENTITYLABELNODE
      ENS_PART_POINT.FILLPATTERN
      ENS_PART_POINT.FLUENTTEXTUREAXIS
      ENS_PART_POINT.FLUENTTEXTUREROTANGLE
      ENS_PART_POINT.FLUENTTEXTURESCALE
      ENS_PART_POINT.HANDLES_ENABLED
      ENS_PART_POINT.HAS0DELEMENTS
      ENS_PART_POINT.HAS1DELEMENTS
      ENS_PART_POINT.HAS2DELEMENTS
      ENS_PART_POINT.HAS3DELEMENTS
      ENS_PART_POINT.HIDDENLINE
      ENS_PART_POINT.HIDDENSURFACE
      ENS_PART_POINT.IJKAXIS
      ENS_PART_POINT.IJKAXISSCALE
      ENS_PART_POINT.ISGROUP
      ENS_PART_POINT.LIGHTAMBIENT
      ENS_PART_POINT.LIGHTDIFFUSE
      ENS_PART_POINT.LIGHTEMISSIVE
      ENS_PART_POINT.LIGHTREFRACTION
      ENS_PART_POINT.LIGHTSPECULARINTENSITY
      ENS_PART_POINT.LIGHTSPECULARREFLECTION
      ENS_PART_POINT.LIGHTSPECULARSHINE
      ENS_PART_POINT.LIGHTSPECULARTINT
      ENS_PART_POINT.LINESTYLE
      ENS_PART_POINT.LINEWIDTH
      ENS_PART_POINT.LPARTPARENT
      ENS_PART_POINT.MATERIALBASETYPE
      ENS_PART_POINT.MATERIALDESCRIPTION
      ENS_PART_POINT.MESHTYPE
      ENS_PART_POINT.METADATA
      ENS_PART_POINT.MIRRORORIGINAL
      ENS_PART_POINT.NODEDETAIL
      ENS_PART_POINT.NODEORIENTATIONANGLE
      ENS_PART_POINT.NODEORIENTATIONAXIS
      ENS_PART_POINT.NODERANGESTEPI
      ENS_PART_POINT.NODERANGESTEPJ
      ENS_PART_POINT.NODERANGESTEPK
      ENS_PART_POINT.NODESCALE
      ENS_PART_POINT.NODESIZEBY
      ENS_PART_POINT.NODETYPE
      ENS_PART_POINT.NODEVARIABLE
      ENS_PART_POINT.OPAQUENESS
      ENS_PART_POINT.PARENT
      ENS_PART_POINT.PARTNUMBER
      ENS_PART_POINT.PARTNUMELE
      ENS_PART_POINT.PARTNUMELECLIENT
      ENS_PART_POINT.PARTTYPE
      ENS_PART_POINT.PARTTYPEENUM
      ENS_PART_POINT.PATHNAME
      ENS_PART_POINT.PERIODICSECTIONS
      ENS_PART_POINT.PREDEFINEDMATERIAL
      ENS_PART_POINT.PROJECT_MASK
      ENS_PART_POINT.REDUCEPOLYGONS
      ENS_PART_POINT.REDUCEPOLYGONSFACTOR
      ENS_PART_POINT.REFFRAME
      ENS_PART_POINT.RENDERINGREFLECTIONID
      ENS_PART_POINT.REVERSENORMAL
      ENS_PART_POINT.SELECTED
      ENS_PART_POINT.SHADING
      ENS_PART_POINT.SHOWSFT
      ENS_PART_POINT.SOURCES
      ENS_PART_POINT.SPECIFYSYMMETRYORIGIN
      ENS_PART_POINT.SYMMETRYANGLE
      ENS_PART_POINT.SYMMETRYAXIS
      ENS_PART_POINT.SYMMETRYDELTA
      ENS_PART_POINT.SYMMETRYMIRRORX
      ENS_PART_POINT.SYMMETRYMIRRORXY
      ENS_PART_POINT.SYMMETRYMIRRORXYZ
      ENS_PART_POINT.SYMMETRYMIRRORXZ
      ENS_PART_POINT.SYMMETRYMIRRORY
      ENS_PART_POINT.SYMMETRYMIRRORYZ
      ENS_PART_POINT.SYMMETRYMIRRORZ
      ENS_PART_POINT.SYMMETRYORIGIN
      ENS_PART_POINT.SYMMETRYRINSTANCES
      ENS_PART_POINT.SYMMETRYTYPE
      ENS_PART_POINT.TEXTURECOORDTYPE
      ENS_PART_POINT.TEXTUREINTERPOLATION
      ENS_PART_POINT.TEXTUREMODE
      ENS_PART_POINT.TEXTUREOBJECT
      ENS_PART_POINT.TEXTUREORIGIN
      ENS_PART_POINT.TEXTUREORIGINNODEID
      ENS_PART_POINT.TEXTUREORIGINUSE
      ENS_PART_POINT.TEXTUREREPEATMODE
      ENS_PART_POINT.TEXTURESORIGINNODEID
      ENS_PART_POINT.TEXTURESVARIABLE
      ENS_PART_POINT.TEXTURESVECTOR
      ENS_PART_POINT.TEXTURETORIGINNODEID
      ENS_PART_POINT.TEXTURETVARIABLE
      ENS_PART_POINT.TEXTURETVECTOR
      ENS_PART_POINT.UUID
      ENS_PART_POINT.VDBMESHADAPTIVITY
      ENS_PART_POINT.VDBMESHOFFSET
      ENS_PART_POINT.VDBNARROWBANDSIZE
      ENS_PART_POINT.VDBVOXELSIZERATIO
      ENS_PART_POINT.VIEWPORTVIS
      ENS_PART_POINT.VISIBILITYELT
      ENS_PART_POINT.VISIBILITYLINE
      ENS_PART_POINT.VISIBILITYNODE
      ENS_PART_POINT.VISIBLE
      ENS_PART_POINT.VOLUMEQUALITY
      ENS_PART_POINT.VOLUMERENDERINGTYPE
      ENS_PART_POINT.__OBJID__
      ENS_PART_POINT.objid
   
   